<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DartScore</string>
    <string name="start_game_button_text">Start Game</string>
    <string name="player_count_prompt">Select the number of players</string>
    <string-array name="PlayerCounts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="enterScore">Enter Score</string>
    <string name="twenty">20</string>
    <string name="nineteen">19</string>
    <string name="eighteen">18</string>
    <string name="seventeen">17</string>
    <string name="sixteen">16</string>
    <string name="fifteen">15</string>
    <string name="bullseye">B</string>
    <string name="singles">x1</string>
    <string name="doubles">x2</string>
    <string name="triples">x3</string>
    <string name="summary">Summary: </string>
    <string name="enter">Enter</string>
</resources>